use new pangu plugin to make intellij.md more beatiful

--- a/_posts/数据结构和算法/二叉树/2018-11-04-二叉树介绍及其前中后遍历实现.md
+++ b/_posts/数据结构和算法/二叉树/2018-11-04-二叉树介绍及其前中后遍历实现.md
@@ -7,35 +7,33 @@ tags:
   - 二叉树
 ---
 
-本文示例代码已上传github，可直接<a href="https://github.com/HuBlanker/someprogram/blob/master/src/main/java/tree/binarytree/BinaryTree.java">点击查看</a>
+本文示例代码已上传 github，可直接<a href="https://github.com/HuBlanker/someprogram/blob/master/src/main/java/tree/binarytree/BinaryTree.java">点击查看</a>
 ## 前言
-前一阵子在学习HashMap的时候，知道了在java8之后的HashMap使用数组+链表+红黑树的结构来实现，看代码的时候百思不得其解。
+前一阵子在学习 HashMap 的时候，知道了在 java8 之后的 HashMap 使用数组+链表+红黑树的结构来实现，看代码的时候百思不得其解。
 
 因此想要学一下”树”这个数据结构，为学习红黑树打下基础，同时，二叉树的一些相关算法也是面试过程中的常问题目，提前学习以备不时之需。
 
-
 <font color="red">本文主要写一些二叉树通用的操作，如遍历，求高度等，添加及删除节点等操作依赖于具体的二叉树实现，如排序二叉树和完全二叉树等的插入方式不同，这里不做实现，在后续文章中具体实现。</font>
 
+## 二叉树是什么？（摘自维基百科和百度百科）
 
-## 二叉树是什么？(摘自维基百科和百度百科)
-
-### 1.定义
+### 1. 定义
 *在计算机科学中，二叉树是每个结点最多有两个子树的树结构。通常子树被称作“左子树”（left subtree）和“右子树”（right subtree）。二叉树常被用于实现二叉查找树和二叉堆。*
 
-### 2.性质
-1. 在非空二叉树中，第i层的结点总数不超过  , i>=1；  
-2. 深度为h的二叉树最多有  个结点(h>=1)，最少有h个结点；
-3. 对于任意一棵二叉树，如果其叶结点数为N0，而度数为2的结点总数为N2，则N0=N2+1；
-4. 具有n个结点的完全二叉树的深度为  （注：[ ]表示向下取整）
-5. 有N个结点的完全二叉树各结点如果用顺序方式存储，则结点之间有如下关系：
-若I为结点编号则 如果I>1，则其父结点的编号为I/2；
-如果2*I<=N，则其左孩子（即左子树的根结点）的编号为2*I；若2*I>N，则无左孩子；
-如果2*I+1<=N，则其右孩子的结点编号为2*I+1；若2*I+1>N，则无右孩子。
-6. 给定N个节点，能构成h(N)种不同的二叉树。
-h(N)为卡特兰数的第N项。h(n)=C(2*n，n)/(n+1)。
-7. 设有i个枝点，I为所有枝点的道路长度总和，J为叶的道路长度总和J=I+2i
+### 2. 性质
+1. 在非空二叉树中，第 i 层的结点总数不超过  , i>=1；  
+2. 深度为 h 的二叉树最多有  个结点 (h>=1)，最少有 h 个结点；
+3. 对于任意一棵二叉树，如果其叶结点数为 N0，而度数为 2 的结点总数为 N2，则 N0=N2+1；
+4. 具有 n 个结点的完全二叉树的深度为  （注：[ ] 表示向下取整）
+5. 有 N 个结点的完全二叉树各结点如果用顺序方式存储，则结点之间有如下关系：
+若 I 为结点编号则 如果 I>1，则其父结点的编号为 I/2；
+如果 2*I<=N，则其左孩子（即左子树的根结点）的编号为 2*I；若 2*I>N，则无左孩子；
+如果 2*I+1<=N，则其右孩子的结点编号为 2*I+1；若 2*I+1>N，则无右孩子。
+6. 给定 N 个节点，能构成 h(N) 种不同的二叉树。
+h(N) 为卡特兰数的第 N 项。h(n)=C(2*n，n)/(n+1)。
+7. 设有 i 个枝点，I 为所有枝点的道路长度总和，J 为叶的道路长度总和 J=I+2i
 
-### 3.类型
+### 3. 类型
 
 * 满二叉树
 * 完全二叉树
@@ -46,7 +44,7 @@ h(N)为卡特兰数的第N项。h(n)=C(2*n，n)/(n+1)。
 
 对各种二叉树的性质不再具体介绍，有兴趣可以自行百度。
 
-## Java实现
+## Java 实现
 
 ### 基本数据结构的实现
 
@@ -54,7 +52,7 @@ h(N)为卡特兰数的第N项。h(n)=C(2*n，n)/(n+1)。
 
 ```java
 class Node{
-  //节点保存的值，这里使用int
+  //节点保存的值，这里使用 int
   int val;
   //左孩子
   Node left;
@@ -112,11 +110,11 @@ public class BinaryTree {
 
 二叉树的遍历思路有两种，深度遍历和广度遍历，其中深度遍历又分为前序，中序，后续三种，下面将对这几种逐个实现。
 
-##### 1.前序遍历的递归实现
+##### 1. 前序遍历的递归实现
 
 ```java
 /**
- * 前序遍历(递归)： 1、访问这个节点 2、调用自身来遍历节点的左子树 3、调用自身来遍历节点的右子树
+ * 前序遍历（递归）： 1、访问这个节点 2、调用自身来遍历节点的左子树 3、调用自身来遍历节点的右子树
  */
 public List<Integer> preOrderTraversal() {
   List<Integer> result = new ArrayList<>();
@@ -139,7 +137,7 @@ private void preOrder(Node root, List<Integer> result) {
 
 首先访问当前节点，如果当前节点为空则返回，不为空则将当前节点的值放入结果列表，然后调用自身遍历自己的左孩子和右孩子。
 
-##### 2.前序遍历的非递归实现
+##### 2. 前序遍历的非递归实现
 
 ```java
 /**
@@ -168,20 +166,20 @@ private List<Integer> prerderTraversal2() {
 在非递归的前序遍历中我们借助了栈，这块刚开始有些难理解，我们来一步一步试一下：
 以上面图中的二叉树为例：
 
-1. 根节点也就是1入栈。<font color="red">此时栈从底到顶为：1，结果列表为空</font>。
-2. 栈不为空，进入while循环，将1出栈并且添加到结果中，然后入栈1的右孩子，左孩子。<font color="red">此时栈从底到顶为：3，2，结果列表为1</font>。
-3. 栈不为空，进入while循环，将2出栈并且添加到结果中，然后将入栈2的右孩子，左孩子。<font color="red">此时栈从底到顶为：3，5，4，结果列表为1，2</font>。
-4. 栈不为空，进入while循环，将4出栈并加入结果中，然后将4的右孩子左孩子入栈(皆为空)。<font color="red">此时栈从底到顶为：3，5，结果列表为1，2，4</font>。
-5. 栈不为空，进入while循环，将5出栈并加入结果，然后将5的右孩子，左孩子入栈(皆为空)。<font color="red">此时栈从底到顶为：3，结果列表为1，2，4，5</font>。
-6. 栈不为空，进入while循环，将3出栈并加入结果，将3的右孩子(6)，左孩子(空)入栈。<font color="red">此时栈从底到顶为：6，结果列表为1，2，4，5，3</font>。
-7. 栈不为空，进入while循环，将6出栈并加入结果，然后将右孩子左孩子入栈(皆为空)。<font color="red">此时栈从底到顶为：空，结果列表为1，2，4，5，3，6</font>。
+1. 根节点也就是 1 入栈。<font color="red">此时栈从底到顶为：1，结果列表为空</font>。
+2. 栈不为空，进入 while 循环，将 1 出栈并且添加到结果中，然后入栈 1 的右孩子，左孩子。<font color="red">此时栈从底到顶为：3，2，结果列表为 1</font>。
+3. 栈不为空，进入 while 循环，将 2 出栈并且添加到结果中，然后将入栈 2 的右孩子，左孩子。<font color="red">此时栈从底到顶为：3，5，4，结果列表为 1，2</font>。
+4. 栈不为空，进入 while 循环，将 4 出栈并加入结果中，然后将 4 的右孩子左孩子入栈（皆为空）。<font color="red">此时栈从底到顶为：3，5，结果列表为 1，2，4</font>。
+5. 栈不为空，进入 while 循环，将 5 出栈并加入结果，然后将 5 的右孩子，左孩子入栈（皆为空）。<font color="red">此时栈从底到顶为：3，结果列表为 1，2，4，5</font>。
+6. 栈不为空，进入 while 循环，将 3 出栈并加入结果，将 3 的右孩子 (6)，左孩子（空）入栈。<font color="red">此时栈从底到顶为：6，结果列表为 1，2，4，5，3</font>。
+7. 栈不为空，进入 while 循环，将 6 出栈并加入结果，然后将右孩子左孩子入栈（皆为空）。<font color="red">此时栈从底到顶为：空，结果列表为 1，2，4，5，3，6</font>。
 8. 栈为空，结束循环返回结果。
 
 -------------------繁琐结束分割线----------------------------
 
 以上两种遍历方式返回的结果都为：```1,2,4,5,3,6```.
 
-##### 3.中序遍历的递归实现
+##### 3. 中序遍历的递归实现
 
 ```java
 /**
@@ -205,8 +203,7 @@ private void inOrder(Node root, List<Integer> result) {
 
 这个的实现思路和递归实现前序遍历很相似，这里不再赘述。
 
-
-##### 4.中序遍历的非递归实现
+##### 4. 中序遍历的非递归实现
 
 ```java
 /**
@@ -236,7 +233,7 @@ private List<Integer> inOrderTraversal2() {
 具体的思路不再讲解，如果不很理解可以照着代码写一遍前序遍历中那种繁琐的流程就懂了。
 
 以上中序遍历的结果为：`4,2,5,1,3,6`.
-##### 5.后序遍历的递归实现
+##### 5. 后序遍历的递归实现
 ```java
 
 /**
@@ -260,7 +257,7 @@ private void postOrder(Node root, List<Integer> result) {
 
 原理与前面类似且十分简单，看代码即可。
 
-##### 6.后序遍历的非递归实现
+##### 6. 后序遍历的非递归实现
 
 ```java
 /**
@@ -287,7 +284,7 @@ private List<Integer> postOrderTraversal2() {
 
 这种方法的思路是利用非递归实现的前序遍历，在前序遍历中，是根-左-右，那么我们将其稍微改一下，变成根-右-左，这样拿到结果之后翻转一下列表，就可以拿到后续遍历啦。
 
-##### 6.层次遍历
+##### 6. 层次遍历
 
 ```java
 /**
@@ -315,23 +312,16 @@ private List<Integer> levelIterator() {
 
 层次遍历比较简单，借助了队列来实现，首先将根节点入队，然后从队首获取元素添加到结果中，并将其左孩子，右孩子依次入队，直到队列为空即可。
 
-
 ## 参考链接
 https://www.jianshu.com/p/0190985635eb  
 https://blog.csdn.net/Double2hao/article/details/53286038
-
-
 
 <br>
 完。
 
 <br>
-<br>
-<br>
-<br>
 <h4>ChangeLog</h4>
 2018-11-04 完成
-<br>
 <br>
 
 **以上皆为个人所思所得，如有错误欢迎评论区指正。**
