--- a/_posts/轮子/2019-04-24-头条后端面试记录.md
+++ b/_posts/轮子/2019-04-24-头条后端面试记录.md
@@ -9,6 +9,16 @@ tags:
 
 ## 目录
 
+
+- [目录](#目录)
+- [前言](#前言)
+        - [1. 求二叉树的最远节点的距离](#1-求二叉树的最远节点的距离)
+        - [2. Java的装箱与拆箱](#2-java的装箱与拆箱)
+        - [3. CMS垃圾收集器的收集过程中,什么时候会暂停用户线程?](#3-cms垃圾收集器的收集过程中什么时候会暂停用户线程)
+        - [4. ConcurrentHashMap在读取的过程中为什么不需要加锁?](#4-concurrenthashmap在读取的过程中为什么不需要加锁)
+        - [5. Redis的字典rehash和JDK中hashmap等rehash有什么不同?](#5-redis的字典rehash和jdk中hashmap等rehash有什么不同)
+- [参考文章](#参考文章)
+
 ## 前言
 最近参加了一下头条后端工程师的面试, 很惨, 一面就挂掉了. 
 
@@ -204,5 +214,4 @@ hashmap的rehash过程想必大家都是了解的, 那么这么稍微说一下re
 
 **联系邮箱：huyanshi2580@gmail.com**
 
-
-**更多学习笔记见个人博客或关注微信公众号<呼延十>------><a href="{{ site.baseurl }}/">呼延十</a>**
+**更多学习笔记见个人博客或关注微信公众号 | 呼延十 |------><a href="{{ site.baseurl }}/">呼延十</a>**
