--- a/_posts/轮子/2019-04-24-头条后端面试记录.md
+++ b/_posts/轮子/2019-04-24-头条后端面试记录.md
@@ -214,4 +214,4 @@ hashmap的rehash过程想必大家都是了解的, 那么这么稍微说一下re
 
 **联系邮箱：huyanshi2580@gmail.com**
 
-**更多学习笔记见个人博客或关注微信公众号 | 呼延十 |------><a href="{{ site.baseurl }}/">呼延十</a>**
+**更多学习笔记见个人博客或关注微信公众号 &lt; 呼延十 &gt;	 ------><a href="{{ site.baseurl }}/">呼延十</a>**
