--- a/_posts/轮子/2019-04-24-头条后端面试记录.md
+++ b/_posts/轮子/2019-04-24-头条后端面试记录.md
@@ -24,7 +24,7 @@ tags:
 
 回来之后也对面试过程做了一些总结,就不夹带私货了,这篇文章主要对面试过程中的技术问题做一个复盘.
 
-#### 1. 求二叉树的最远节点的距离
+### 1. 求二叉树的最远节点的距离
 
 这是一道 LeetCode 原题, [原题链接](https://leetcode-cn.com/problems/diameter-of-binary-tree/)
 
@@ -61,7 +61,7 @@ tags:
 
 代码很简单, 就是递归的求节点的左子树最远叶子和右子树最远叶子. 然后在 计算过程中, 将 `当前节点的直径` 作为一个备选项存储,最后求最大直径即可.
 
-#### 2. Java的装箱与拆箱
+### 2. Java的装箱与拆箱
 
 Java在1.5添加了自动装箱和拆箱机制. 总的来说基本就是基本类型和对应的包装类型之间的自动转换.
 
@@ -84,7 +84,7 @@ public class BoxTest {
 
 分别调用了Integer的 `valueOf` 方法和`intValue` 方法.
 
-#### 3. CMS垃圾收集器的收集过程中,什么时候会暂停用户线程?
+### 3. CMS垃圾收集器的收集过程中,什么时候会暂停用户线程?
 
 这里不对所有的垃圾收集器展开讲解, 有兴趣的朋友们可以移步 [JVM的数据区域与垃圾收集](http://huyan.couplecoders.tech/java/%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0/%E6%B7%B1%E5%85%A5%E4%BA%86%E8%A7%A3java%E8%99%9A%E6%8B%9F%E6%9C%BA/2019/07/30/JVM%E6%95%B0%E6%8D%AE%E5%8C%BA%E5%9F%9F%E4%B8%8E%E5%9E%83%E5%9C%BE%E6%94%B6%E9%9B%86-%E6%B7%B1%E5%85%A5%E4%BA%86%E8%A7%A3JVM%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0/).
 
@@ -94,7 +94,7 @@ public class BoxTest {
 
 所以在初始标记和重新标记两个阶段还是需要暂停用户线程的.
 
-#### 4. ConcurrentHashMap在读取的过程中为什么不需要加锁?
+### 4. ConcurrentHashMap在读取的过程中为什么不需要加锁?
 
 查看`ConcurrentHashMap` 的源码可以发现, Node节点的定义是:
 
@@ -150,7 +150,7 @@ public V get(Object key) {
 
 所以 `get` 过程中不用加锁也可以正确的获取对象.
 
-#### 5. Redis的字典rehash和JDK中hashmap等rehash有什么不同?
+### 5. Redis的字典rehash和JDK中hashmap等rehash有什么不同?
 
 这个问题比较宽泛,我个人的理解有以下两点.
 
