--- a/_posts/面试/2019-04-24-头条后端面试记录.md
+++ b/_posts/面试/2019-04-24-头条后端面试记录.md
@@ -24,7 +24,7 @@ tags:
 
 回来之后也对面试过程做了一些总结,就不夹带私货了,这篇文章主要对面试过程中的技术问题做一个复盘.
 
-### 1. 求二叉树的最远节点的距离
+### 求二叉树的最远节点的距离
 
 这是一道 LeetCode 原题, [原题链接](https://leetcode-cn.com/problems/diameter-of-binary-tree/)
 
