--- a/_posts/面试/2019-04-24-头条后端面试记录.md
+++ b/_posts/面试/2019-04-24-头条后端面试记录.md
@@ -10,14 +10,16 @@ tags:
 ## 目录
 
 
+
 - [目录](#目录)
 - [前言](#前言)
-        - [1. 求二叉树的最远节点的距离](#1-求二叉树的最远节点的距离)
-        - [2. Java的装箱与拆箱](#2-java的装箱与拆箱)
-        - [3. CMS垃圾收集器的收集过程中,什么时候会暂停用户线程?](#3-cms垃圾收集器的收集过程中什么时候会暂停用户线程)
-        - [4. ConcurrentHashMap在读取的过程中为什么不需要加锁?](#4-concurrenthashmap在读取的过程中为什么不需要加锁)
-        - [5. Redis的字典rehash和JDK中hashmap等rehash有什么不同?](#5-redis的字典rehash和jdk中hashmap等rehash有什么不同)
+    - [求二叉树的最远节点的距离](#求二叉树的最远节点的距离)
+    - [2. Java的装箱与拆箱](#2-java的装箱与拆箱)
+    - [3. CMS垃圾收集器的收集过程中,什么时候会暂停用户线程?](#3-cms垃圾收集器的收集过程中什么时候会暂停用户线程)
+    - [4. ConcurrentHashMap在读取的过程中为什么不需要加锁?](#4-concurrenthashmap在读取的过程中为什么不需要加锁)
+    - [5. Redis的字典rehash和JDK中hashmap等rehash有什么不同?](#5-redis的字典rehash和jdk中hashmap等rehash有什么不同)
 - [参考文章](#参考文章)
+
 
 ## 前言
 最近参加了一下头条后端工程师的面试, 很惨, 一面就挂掉了. 
