--- a/_posts/面试/2019-04-24-头条后端面试记录.md
+++ b/_posts/面试/2019-04-24-头条后端面试记录.md
@@ -13,7 +13,7 @@ tags:
 
 - [目录](#目录)
 - [前言](#前言)
-    - [求二叉树的最远节点的距离](#求二叉树的最远节点的距离)
+    - [1. 求二叉树的最远节点的距离](#1-求二叉树的最远节点的距离)
     - [2. Java的装箱与拆箱](#2-java的装箱与拆箱)
     - [3. CMS垃圾收集器的收集过程中,什么时候会暂停用户线程?](#3-cms垃圾收集器的收集过程中什么时候会暂停用户线程)
     - [4. ConcurrentHashMap在读取的过程中为什么不需要加锁?](#4-concurrenthashmap在读取的过程中为什么不需要加锁)
@@ -26,7 +26,7 @@ tags:
 
 回来之后也对面试过程做了一些总结,就不夹带私货了,这篇文章主要对面试过程中的技术问题做一个复盘.
 
-### 求二叉树的最远节点的距离
+### 1. 求二叉树的最远节点的距离
 
 这是一道 LeetCode 原题, [原题链接](https://leetcode-cn.com/problems/diameter-of-binary-tree/)
 
