字符串德文本相似度计算

--- a/_posts/实际案例/2019-06-21-短URL服务的设计以及实现.md
+++ b/_posts/实际案例/2019-06-21-短URL服务的设计以及实现.md
@@ -11,16 +11,17 @@ tags:
 
 ## 目录
 
-- [目录](#目录)
+
 - [前言](#前言)
 - [短URL基础原理](#短url基础原理)
 - [服务设计](#服务设计)
-        - [对应关系如何存储?](#对应关系如何存储)
-        - [如何保证长短链接一一对应?](#如何保证长短链接一一对应)
-        - [短URL的存储](#短url的存储)
-        - [高并发](#高并发)
-        - [分布式](#分布式)
+    - [对应关系如何存储?](#对应关系如何存储)
+    - [如何保证长短链接一一对应?](#如何保证长短链接一一对应)
+    - [短URL的存储](#短url的存储)
+    - [高并发](#高并发)
+    - [分布式](#分布式)
 - [实现](#实现)
+
 
 ## 前言
 
@@ -64,11 +65,11 @@ tags:
 
 接下来以QA形式写几个小问题:
 
-#### 对应关系如何存储?
+### 对应关系如何存储?
 
 这个对应数据肯定是要落盘的,不能每次系统重启就重新排号,所以可以采用mysql等数据库来存储.而且如果数据量小且qps低,直接使用数据库的自增主键就可以实现.
 
-#### 如何保证长短链接一一对应?
+### 如何保证长短链接一一对应?
 
 按照上面的发号器策略,是不能保证长短链接的一一对应的,你连续用同一个URL请求两次,结果值都是不一样的.
 
@@ -76,13 +77,13 @@ tags:
 
 但是可以实现一些变种的,来实现部分的一一对应, 比如将最近/最热门的对应关系存储在K-V数据库中,这样子可以节省空间的同时,加快响应速度.
 
-#### 短URL的存储
+### 短URL的存储
 
 我们返回的短URL一般是将数字转换成32进制,这样子可以更加有效的缩短URL长度,那么32进制的数字对计算机来说只是字符串,怎么存储呢?直接存储字符串对等值查找好找,对范围查找等太不友好了.
 
 其实可以直接存储10进制的数字,这样不仅占用空间少,对查找的支持较好,同时还可以更加方便的转换到更多/更少的进制来进一步缩短URL.
 
-#### 高并发
+### 高并发
 
 如果直接存储在MySQL中,当并发请求增大,对数据库的压力太大,可能会造成瓶颈,这时候是可以有一些优化的.
 
@@ -98,7 +99,7 @@ tags:
 
 这样可以将对数据库持续的操作移到代码中进行,并且异步进行获取和写入操作,保证服务的持续高并发.
 
-#### 分布式
+### 分布式
 
 上面设计的系统是有单点的,那就是发号器是个单点,容易挂掉.
 
@@ -230,5 +231,3 @@ public class ShortUrlUtil {
 
 
 **更多学习笔记见个人博客------><a href="{{ site.baseurl }}/">呼延十</a>**
-
-我的博客即将同步至腾讯云+社区，邀请大家一同入驻：https://cloud.tencent.com/developer/support-plan?invite_code=28cw5z9vufvoo
