--- a/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
@@ -44,6 +44,9 @@ ciw | 删除一个单词 (以及其他的TextObject操作)
 `. | 跳转到最后一次编辑的地方. | . 这个mark代表了最后一次编辑
 '. | 跳转到最后一次编辑的那一行
 g; g, | 可以在changelist来回跳转 (就是在你编辑过的地方来回跳转)
+zz | 将光标所在行移动到屏幕中间
+s | 删除当前字符并进入编辑模式
+c | 删除当前字符
 
 
 
