--- a/_posts/数据结构和算法/其他/2019-11-11-如何计算两个字符串之间的文本相似度?.md
+++ b/_posts/数据结构和算法/其他/2019-11-11-如何计算两个字符串之间的文本相似度?.md
@@ -49,7 +49,7 @@ java 代码实现如下：
 
 >The Sørensen–Dice coefficient (see below for other names) is a statistic used to gauge the similarity of two samples. It was independently developed by the botanists Thorvald Sørensen[1] and Lee Raymond Dice,[2] who published in 1948 and 1945 respectively.
 
-$${\displaystyle DSC={\frac {2|X\cap Y|}{|X|+|Y|}}}$$.
+![2019-11-12-15-58-18](http://img.couplecoders.tech/2019-11-12-15-58-18.png)
 
 需要注意的是，他是：**集合交集的 2 倍除以两个集合相加。并不是并集**.
 
@@ -172,11 +172,11 @@ java 代码如下：
 
 计算公式如下：
 
-$${\text{similarity}}=\cos(\theta )={A\cdot B \over \|A\|\|B\|}={\frac  {\sum \limits _{{i=1}}^{{n}}{A_{i}\times B_{i}}}{{\sqrt  {\sum \limits _{{i=1}}^{{n}}{(A_{i})^{2}}}}\times {\sqrt  {\sum \limits _{{i=1}}^{{n}}{(B_{i})^{2}}}}}}，$$
+![2019-11-12-15-57-05](http://img.couplecoders.tech/2019-11-12-15-57-05.png)
 
 余弦我们都比较熟悉，那么是怎么用它来计算两个字符串之间的相似度呢？
 
-首先我们将字符串向量化，之后就可以在一个平面空间中，求出他们向量之间夹角的余弦值即可。如下图所示：
+首先我们将字符串向量化，之后就可以在一个平面空间中，求出他们向量之间夹角的余弦值即可。
 
 字符串向量化怎么做呢？我举一个简单的例子：
 
