--- a/_posts/数据结构和算法/其他/2019-11-11-如何计算两个字符串之间的文本相似度?.md
+++ b/_posts/数据结构和算法/其他/2019-11-11-如何计算两个字符串之间的文本相似度?.md
@@ -5,6 +5,18 @@ tags:
   - Java
 ---
 
+
+
+- [前言](#前言)
+- [Jaccard 相似度](#jaccard-相似度)
+- [Sorensen Dice 相似度系数](#sorensen-dice-相似度系数)
+- [Levenshtein](#levenshtein)
+- [汉明距离](#汉明距离)
+- [余弦相似性](#余弦相似性)
+- [总结](#总结)
+- [参考文章](#参考文章)
+
+
 ## 前言
 
 最近好久没有写文章了，上一篇文章还是九月十一的时候写的，距今已经两个月了，期间一直在忙一些工作上的事情，今天终于有点空闲，所以写一篇文章散散心。
