change head img

--- a/_posts/开发者工具/快捷键/2019-01-17-终端复用利器-Tmux.md
+++ b/_posts/开发者工具/快捷键/2019-01-17-终端复用利器-Tmux.md
@@ -66,6 +66,7 @@ tmux kill-server # 删除所有的会话
 
 * f 根据窗口名搜索选择窗口，可模糊匹配
 
+* . 用来整理窗口序号, 按下`ctrl+b .`之后, 输入一个数字加回车, 可以将当前窗口的序号改为该值. 如果不输入数字直接回车, 可以整理(重新编号为0-n)当前窗口以前的窗口.
 
 #### 窗格操作
 
