--- a/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
@@ -47,8 +47,42 @@ g; g, | 可以在changelist来回跳转 (就是在你编辑过的地方来回跳
 zz | 将光标所在行移动到屏幕中间
 s | 删除当前字符并进入编辑模式
 c | 删除当前字符
+qaq , @q | 录制一个宏并使用
 
 
+
+### vim 宏的使用
+
+vim 提供了录制一个 宏, 并且不断回放的功能.
+
+比如 按下 `qh` 开始录制一个名为`h`的宏, 录制结束按下`q`. 之后移动到每一个想做同样操作的地方, 按下`@h`即可.
+
+栗子:
+
+对于下面的文本, 我们想要删除所有的引号, 由于单词长度不一样, 使用列编辑模式比较麻烦.
+
+```
+"word"
+"hello"
+"test"
+"an"
+```
+
+此时,我们进行以下操作
+
+```
+1. 将光标放在word前面的`"`上.
+2. 按下 `qh` , 开始录制一个名为 `h` 的宏.
+3. 按下`x`, 删除当前位置的引号, 之后按两次`e`, 光标移动到了word后面的引号.
+4. 再次按下`x`, 删除当前位置的引号,
+5. 按下`q`, 结束录制.
+6. 之后将光标移动到第二行的第一个引号处, 按下`@h`, 使用刚才录制的宏.
+7. 逐行操作即可.
+```
+
+录制了一个简易的gif如下~:
+
+![](http://img.couplecoders.tech/%E5%BD%95%E5%88%B6%E5%AE%8F.gif)
 
 <br>
 完。
@@ -60,6 +94,7 @@ c | 删除当前字符
 <h4>ChangeLog</h4>
 2019-01-11 完成
 2019-04-02 格式重构
+2019-11-20 录制宏
 <br>
 <br>
 
