--- a/_posts/linux/2019-12-04-AWK入门学习.md
+++ b/_posts/linux/2019-12-04-AWK入门学习.md
@@ -343,8 +343,10 @@ awk '{s+=$1} ENG {printf "%.0f", s}' /path/to/file
 ```text
 man awk
 ```
-## 参考文章
 
+```
+这是一些测试文本
+```
 
 <br>
 
@@ -355,7 +357,7 @@ man awk
 <br>
 <br>
 <h4>ChangeLog</h4>
-2019-05-19 完成
+2019-12-05 完成
 <br>
 <br>
 
