--- a/_posts/linux/2019-12-04-AWK入门学习.md
+++ b/_posts/linux/2019-12-04-AWK入门学习.md
@@ -6,6 +6,23 @@ tags:
   - 效率编程
 ---
 
+
+- [前言](#前言)
+- [概述](#概述)
+- [基础语法](#基础语法)
+    - [脚本语法](#脚本语法)
+    - [命令行语法](#命令行语法)
+    - [程序结构](#程序结构)
+- [操作符](#操作符)
+- [流程控制](#流程控制)
+- [循环](#循环)
+- [内建变量](#内建变量)
+- [内建函数](#内建函数)
+- [自定义函数](#自定义函数)
+- [常用场景示例](#常用场景示例)
+- [快速帮助](#快速帮助)
+
+
 ## 前言
 
 由于最近的工作内容的关系，经常需要对文本文件做一些处理。每次都要写个脚本来处理实在是有点麻烦。这时候想起来很久以前稍微接触过的 AWK, 来做这个工作真的是再合适不过了。
