--- a/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
+++ b/_posts/开发者工具/快捷键/2019-01-11-vim-学习记录.md
@@ -7,11 +7,12 @@ tags:
   - 效率编程
 ---
 
+## 快捷键
 
 |快捷键 | 作用 | 备注
 --- | --- | ---
 删除当前行 | `dd`
-查找某个内容 | `/content` | 使用`n`下一个,`N`上一个
+查找某个内容 | `/content` | 使用`n`下一个，`N`上一个
 保存离开 | `ZZ`
 复制粘贴 |`y` `p`
 撤回上一次操作 | `u`
@@ -25,41 +26,39 @@ tags:
 跳转至第多少行 | 数字 + `G`
 百分比跳转  | 直接输入`10%`,`50%`等
 跳转多少行/多少字 | 数字 + `hjkl`
-选中当前行 | V | 其实是进入行编辑模式,进入会自动选择当前行
-ctrl + v | 块选择,可以用来多行注释和取消注释
+选中当前行 | V | 其实是进入行编辑模式，进入会自动选择当前行
+ctrl + v | 块选择，可以用来多行注释和取消注释
 w | 下一个单词
 b | 上一个单词
 d + G | 删除到文件结束
-d + $ | 删除到行末  | d + 其他东西的操作较多,不再列举.
-cc | 删除当前行并且在当前行进入插入模式.
-C | 清除当前光标之后的内容(本行),进入插入模式
-ma | 标记此处为a
-`a | 去到a标记那里.
-^ | 移到行首(不包括空格的行首)
+d + $ | 删除到行末  | d + 其他东西的操作较多，不再列举。
+cc | 删除当前行并且在当前行进入插入模式。
+C | 清除当前光标之后的内容（本行）, 进入插入模式
+ma | 标记此处为 a
+`a | 去到 a 标记那里。
+^ | 移到行首（不包括空格的行首）
 { } | 上一个段落和下一个段落
 % | 在成对的括号之间进行移动
-r | re 将当前指针所在的字符替换为e.
-viw | 选中一个单词(TextObject)
-ciw | 删除一个单词 (以及其他的TextObject操作)
-`. | 跳转到最后一次编辑的地方. | . 这个mark代表了最后一次编辑
+r | re 将当前指针所在的字符替换为 e.
+viw | 选中一个单词 (TextObject)
+ciw | 删除一个单词 （以及其他的 TextObject 操作）
+`. | 跳转到最后一次编辑的地方。| . 这个 mark 代表了最后一次编辑
 '. | 跳转到最后一次编辑的那一行
-g; g, | 可以在changelist来回跳转 (就是在你编辑过的地方来回跳转)
+g; g, | 可以在 changelist 来回跳转 （就是在你编辑过的地方来回跳转）
 zz | 将光标所在行移动到屏幕中间
 s | 删除当前字符并进入编辑模式
 c | 删除当前字符
 qaq , @q | 录制一个宏并使用
 
+## vim 宏的使用
 
+vim 提供了录制一个 宏，并且不断回放的功能。
 
-### vim 宏的使用
+比如 按下 `qh` 开始录制一个名为`h`的宏，录制结束按下`q`. 之后移动到每一个想做同样操作的地方，按下`@h`即可。
 
-vim 提供了录制一个 宏, 并且不断回放的功能.
+栗子：
 
-比如 按下 `qh` 开始录制一个名为`h`的宏, 录制结束按下`q`. 之后移动到每一个想做同样操作的地方, 按下`@h`即可.
-
-栗子:
-
-对于下面的文本, 我们想要删除所有的引号, 由于单词长度不一样, 使用列编辑模式比较麻烦.
+对于下面的文本，我们想要删除所有的引号，由于单词长度不一样，使用列编辑模式比较麻烦。
 
 ```
 "word"
@@ -68,34 +67,42 @@ vim 提供了录制一个 宏, 并且不断回放的功能.
 "an"
 ```
 
-此时,我们进行以下操作
+此时，我们进行以下操作
 
 ```
-1. 将光标放在word前面的`"`上.
-2. 按下 `qh` , 开始录制一个名为 `h` 的宏.
-3. 按下`x`, 删除当前位置的引号, 之后按两次`e`, 光标移动到了word后面的引号.
-4. 再次按下`x`, 删除当前位置的引号,
-5. 按下`q`, 结束录制.
-6. 之后将光标移动到第二行的第一个引号处, 按下`@h`, 使用刚才录制的宏.
-7. 逐行操作即可.
+1. 将光标放在 word 前面的`"`上。
+2. 按下 `qh` , 开始录制一个名为 `h` 的宏。
+3. 按下`x`, 删除当前位置的引号，之后按两次`e`, 光标移动到了 word 后面的引号。
+4. 再次按下`x`, 删除当前位置的引号，
+5. 按下`q`, 结束录制。
+6. 之后将光标移动到第二行的第一个引号处，按下`@h`, 使用刚才录制的宏。
+7. 逐行操作即可。
 ```
 
-录制了一个简易的gif如下~:
+录制了一个简易的 gif 如下~:
 
 ![](http://img.couplecoders.tech/%E5%BD%95%E5%88%B6%E5%AE%8F.gif)
+
+## 显示不可见字符
+
+处理纯文本的时候，可能为了格式我们想看到类似于换行，制表符等平时不可见的符号。此时输入`:set invlist`, 即可显示。查看完毕后，输入`:set nolist`, 即可恢复。
+
+使用效果如下图:
+
+![](http://img.couplecoders.tech/vim-invlist%E6%98%BE%E7%A4%BA%E4%B8%8D%E5%8F%AF%E8%A7%81%E5%AD%97%E7%AC%A6.gif)
+
+
+图中 `^I`是制表符, `$`是换行符.
 
 <br>
 完。
 
 <br>
-<br>
-<br>
-<br>
 <h4>ChangeLog</h4>
 2019-01-11 完成
 2019-04-02 格式重构
 2019-11-20 录制宏
-<br>
+2019-12-04 查看不可见字符
 <br>
 
 **以上皆为个人所思所得，如有错误欢迎评论区指正。**
