--- a/_posts/linux/2019-12-04-AWK入门学习.md
+++ b/_posts/linux/2019-12-04-AWK入门学习.md
@@ -207,6 +207,10 @@ awk 'BEGIN {
 * NF 表示文件中的当前行被分割的列数，可以理解为 MySQL 数据表里面每一条记录有多少个字段，所以 NF 表示倒数第一格字段，(NF-1) 表示倒数第二个字段。
 * FS 表示 awk 的输入分隔符，默认分隔符为空格和制表符，可以对其进行自定义设置
 * OFS 表示 awk 的输出分隔符，默认为空格，也可以对其进行自定义设置
+```text
+### 将以分号分割的文本, 改成用\t分割的
+awk -v FS=':' -v OFS='\n' '{print $1,$2}' a.txt
+```
 * FILENAME 表示当前文件的文件名称，如果同时处理多个文件，它也表示当前文件名称
 * RS 行分隔符，用于分割行，默认为换行符
 * ORS 输出记录的分隔符，默认为换行符
