--- a/_posts/database/Redis/2019-01-05-Redis系列(一)底层数据结构之简单动态字符串.md
+++ b/_posts/database/Redis/2019-01-05-Redis系列(一)底层数据结构之简单动态字符串.md
@@ -5,6 +5,19 @@ tags:
   - Java
 ---
 
+- [前言](#前言)
+- [定义](#定义)
+- [优劣](#优劣)
+    - [高性能获取字符串长度](#高性能获取字符串长度)
+    - [杜绝缓冲区溢出](#杜绝缓冲区溢出)
+    - [减少修改字符串产生的内存分配次数，提高修改字符串性能](#减少修改字符串产生的内存分配次数提高修改字符串性能)
+    - [二进制安全](#二进制安全)
+    - [兼容部分 C 语言的库函数](#兼容部分-c-语言的库函数)
+- [总结](#总结)
+- [参考文章](#参考文章)
+- [联系我](#联系我)
+
+
 ## 前言
 Redis 已经是大家耳熟能详的东西了，日常工作也都在使用，面试中也是高频的会涉及到，那么我们对它究竟了解有多深刻呢？
 
