--- a/_posts/database/Redis/2020-01-05-Redis系列(一)底层数据结构之简单动态字符串.md
+++ b/_posts/database/Redis/2020-01-05-Redis系列(一)底层数据结构之简单动态字符串.md
@@ -147,6 +147,42 @@ C 字符串 | SDS
 只能保存纯文本 | 二进制安全，可以保存任意格式的二进制数据
 无缝使用所有 C 库函数 | 可以兼容一部分的 C 库函数
 
+## SDS 限制为512M问题(存疑)
+
+从官网上我们可以得知, Redis的key以及字符串数据结构的值, 最大的大小为 512M.这是官网信息,基本上毋庸置疑.
+
+![2020-01-04-19-50-11](http://img.couplecoders.tech/2020-01-04-19-50-11.png)
+
+让我们试一下:
+
+```java
+    public static void main(String[] args) {
+        Jedis jedis = new Jedis("localhost");
+        jedis.set("test", "test");
+        byte[] bytes = new byte[1024 * 1024];
+        String str = new String(bytes);
+        // 每次加1MB
+        for (int i = 0; i < 512; i++) {
+            jedis.append("test", str);
+        }
+    }
+```
+
+Redis会报错, 报错信息为:
+
+```text
+Exception in thread "main" redis.clients.jedis.exceptions.JedisDataException: ERR string exceeds maximum allowed size (512MB)
+	at redis.clients.jedis.Protocol.processError(Protocol.java:132)
+	at redis.clients.jedis.Protocol.process(Protocol.java:166)
+	at redis.clients.jedis.Protocol.read(Protocol.java:220)
+	at redis.clients.jedis.Connection.readProtocolWithCheckingBroken(Connection.java:309)
+	at redis.clients.jedis.Connection.getIntegerReply(Connection.java:260)
+	at redis.clients.jedis.Jedis.append(Jedis.java:689)
+	at daily.JedisTest.main(JedisTest.java:50)
+```
+
+好的, 坐实了~.
+
 ## 参考文章
 
 《Redis 的设计与实现（第二版）》
