--- a/_posts/database/Redis/2020-01-05-Redis系列(一)底层数据结构之简单动态字符串.md
+++ b/_posts/database/Redis/2020-01-05-Redis系列(一)底层数据结构之简单动态字符串.md
@@ -5,6 +5,7 @@ tags:
   - Java
 ---
 
+
 - [前言](#前言)
 - [定义](#定义)
 - [优劣](#优劣)
@@ -14,6 +15,7 @@ tags:
     - [二进制安全](#二进制安全)
     - [兼容部分 C 语言的库函数](#兼容部分-c-语言的库函数)
 - [总结](#总结)
+- [SDS 限制为512M问题](#sds-限制为512m问题)
 - [参考文章](#参考文章)
 - [联系我](#联系我)
 
@@ -147,7 +149,7 @@ C 字符串 | SDS
 只能保存纯文本 | 二进制安全，可以保存任意格式的二进制数据
 无缝使用所有 C 库函数 | 可以兼容一部分的 C 库函数
 
-## SDS 限制为512M问题(存疑)
+## SDS 限制为512M问题
 
 从官网上我们可以得知, Redis的key以及字符串数据结构的值, 最大的大小为 512M.这是官网信息,基本上毋庸置疑.
 
