--- a/_posts/数据结构和算法/字符串/2018-12-11-[每日一题]全排列问题的Java实现.md
+++ b/_posts/数据结构和算法/字符串/2018-12-11-[每日一题]全排列问题的Java实现.md
@@ -93,6 +93,11 @@ C---的第二位可能是AB,全排列分别为:
   }
 ```
 
+## 联系我
+最后，欢迎关注我的个人公众号【 呼延十 】，会不定期更新很多后端工程师的学习笔记。
+也欢迎直接公众号私信或者邮箱联系我，一定知无不言，言无不尽。
+![](http://img.couplecoders.tech/%E6%89%AB%E7%A0%81_%E6%90%9C%E7%B4%A2%E8%81%94%E5%90%88%E4%BC%A0%E6%92%AD%E6%A0%B7%E5%BC%8F-%E6%A0%87%E5%87%86%E8%89%B2%E7%89%88.png)
+
 完。
 
 <br>
