--- a/_drafts/redis/2020-01-12-Redis系列(九)底层数据结构之五种基础数据类型的实现.md
+++ b/_drafts/redis/2020-01-12-Redis系列(九)底层数据结构之五种基础数据类型的实现.md
@@ -242,7 +242,9 @@ hastable | 不满足上述条件的其他条件
 有序集合 | ziplist 或者 `skiplist`, skiplist 编码中使用了跳跃表+字典
 散列 | ziplist 或者 hashtable
 
-至于他们的转换条件，由于我不会用 markdown 画多维表格，但是又不想写 html, 就不做总结了，需要的读者可以点击目录跳转至每一个小结的总结~.
+至于他们的转换条件，如下:
+
+![2020-01-16-20-48-29](http://img.couplecoders.tech/2020-01-16-20-48-29.png)
 
 ## 参考文章
 
